@@ -72,7 +72,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.27  2006-06-11 19:47:25  tino
+# Revision 1.28  2006-06-16 20:30:38  tino
+# typo ${ instead $(
+#
+# Revision 1.27  2006/06/11 19:47:25  tino
 # See ChangeLog
 #
 # Revision 1.26  2006/01/29 17:49:52  tino
@@ -210,7 +213,7 @@ install:
 #R	$(STRIP) "$(INSTALLPATH)/bin/$(PROG#c#)"
 
 #SINSTALL BIN SBIN LIB ETC MAN SMAN INF SINF
-#R	$(RM) "$(INSTALLPATH)/${#s#PATH)/#v#"
+#R	$(RM) "$(INSTALLPATH)/$(#s#PATH)/#v#"
 #R	$(CP) "#v#" "$(INSTALLPATH)/$(#s#PATH)/#v#"
 
 #S SUBDIRS
