@@ -1,3 +1,7 @@
+2006-06-16    <tino@firebird.03.softkill.net>
+
+	* Makefile.proto (install): typo corrected
+
 2006-06-11    <tino@firebird.03.softkill.net>
 
 	* Makefile.awk (#S): Added variable prefix
